...
  @override
  Widget build(BuildContext context) {
    return BaseStateConsumer(
      cubit: _cubit,
      onInitial: (context) {
        return Semantics(
          identifier: 'accountSettingsChangePasswordSheet',
          child: FunBottomSheet(
            closeAction: () => Navigator.of(context).pop(),
            title: context.l10n.changePassword,
            content: SingleChildScrollView(
              child: Column(
                children: [
...
