...
                return null;
              },
              hintText: locals.email,
            ),
            const SizedBox(height: 16),
            Semantics(
              identifier: 'Login-Bottomsheet-Password-Input',
              textField: true,
              child: InputFormField(
              controller: passwordController,
              autofillHints: const [AutofillHints.password],
              keyboardType: TextInputType.visiblePassword,
              onChanged: (_) => setState(() {}),
...
              ),
            ),
          ],
        ),
      ),
      primaryButton: FunButton(
        semanticsIdentifier: 'Login-Bottomsheet-Submit-Button',
        isDisabled: !isEnabled || isLoading,
        onTap: isEnabled && !isLoading ? () => onLogin(context) : null,
        text: locals.login,
        isLoading: isLoading,
        analyticsEvent: AnalyticsEventName.loginClicked.toEvent(),
      ),
...
