...
  }

  /// Builds the main editing interface
  Widget _buildEditSheet(BuildContext context) {
    final locals = context.l10n;
    return Semantics(
      identifier: 'accountSettingsMaxAmountSheet',
      child: FunBottomSheet(
      title: locals.giveLimit,
      closeAction: () => context.pop(),
      content: Column(
        crossAxisAlignment: CrossAxisAlignment.stretch,
        children: [
...
