...
            showBadge: auth.user.needRegistration || !auth.user.mandateSigned,
            position: badges.BadgePosition.topStart(
              top: 10,
              start: 30,
            ),
            child: Semantics(
              identifier: 'homeMenu',
              button: true,
              child: IconButton(
                icon: const FaIcon(
                  FontAwesomeIcons.bars,
                  semanticLabel: 'homeMenu',
                ),
...
