...
                              controller: _emailController,
                              screen: 'welcome',
                              countryCode: state.country?.countryCode,
                              onApplied: _cubit.updateEmail,
                              fieldBuilder: (context, focusNode) {
                                return Semantics(
                                  identifier: 'Email-Input',
                                  textField: true,
                                  child: InputFormField(
                                    focusNode: focusNode,
                                    controller: _emailController,
                                    hintText: locals.email,
                                    onChanged: _cubit.updateEmail,
...
                                  ],
                                ),
                              ),
                            ),
                            const SizedBox(height: 12),
                            FunButton(
                              semanticsIdentifier: 'Email-Continue-Button',
                              isDisabled: !state.continueButtonEnabled,
                              isLoading: _isLoading,
                              onTap: state.continueButtonEnabled
                                  ? () async {
                                      // Hide keyboard when continue button is tapped
                                      FocusScope.of(context).unfocus();
...
