...
                          ? 'assets/images/face_id_image.svg'
                          : 'assets/images/touch_id_image.svg',
                      width: 160,
                    ),
                    const Spacer(),
                    CustomSecondaryBorderButton(
                      key: const ValueKey('PermitBiometric-Deny-Button'),
                      title: context.l10n.permitBiometricSkip,
                      onPressed: () {
                        AnalyticsHelper.logEvent(
                          eventName: state.permitBiometricRequest.isRegistration
                              ? AnalyticsEventName.skipBiometricWhenRegistered
                              : AnalyticsEventName.skipBiometricWhenLoggedIn,
...
