...

  @override
  Widget build(BuildContext context) {
    final locals = context.l10n;

    return Semantics(
      identifier: 'accountSettingsPlatformContributionScreen',
      child: FunScaffold(
      appBar: FunTopAppBar(
        variant: FunTopAppBarVariant.white,
        title: locals.platformContributionTitle,
        leading: GivtBackButtonFlat(
          onPressed: () async => _handleBackPressed(context),
...
