...
                        ?.copyWith(fontWeight: FontWeight.w400),
                  ),
                ),
                const Spacer(flex: 2),
                FunButton(
                  onTap: onContinue,
                  text: 'Continue',
                  analyticsEvent: AnalyticsEvent(
                    AmplitudeEvents.continueClicked,
                  ),
                ),
              ],
            ),
...
