...
          content: Text(
            'Are you sure you want to undo generosity challenge progress including Day ${dayIndax + 1}?',
          ),
          actions: [
            TextButton(
              onPressed: () => context.pop(true),
              child: const Text('Yes'),
            ),
            TextButton(
              onPressed: () => context.pop(false),
              child: const Text('Cancel'),
            ),
          ],
        );
      },
    );
    if (true == result) {
...
