...
      },
      title: 'Select an organization',
      removedCollectGroupTypes: const [
        CollectGroupType.campaign,
        CollectGroupType.artists,
      ],
      buttonText: 'Confirm',
      onTapFunButton: () => _onTapConfirm(context),
      analyticsEvent: AnalyticsEventName.boxOriginConfirmClicked.toEvent(),
    );
  }

  Future<void> _onTapConfirm(BuildContext context) async {
...
