...
                    onTap: () => {
                      onCancel.call(),
                      context
                        ..pop()
                        ..pop(),
                    },
                    text: 'Yes, cancel',
                    leftIcon: FontAwesomeIcons.xmark,
                    analyticsEvent: AnalyticsEventName.cancelRGAYesClicked.toEvent(),
                  ),
                  const SizedBox(height: 8),
                  FunButton(
                    variant: FunButtonVariant.secondary,
                    fullBorder: true,
                    onTap: () => context.pop(),
                    text: 'No, go back',
                    analyticsEvent: AnalyticsEventName.cancelRGANoClicked.toEvent(),
                  ),
                ],
              ),
            ],
          ),
...
