...
                          FontAwesomeIcons.xmark,
                          size: 16,
                          color: AppTheme.error30,
                        ),
                      ),
                      label: Text(
                        'Cancel Recurring Amount',
                        style: theme.textTheme.bodySmall!.copyWith(
                          color: AppTheme.error30,
                          fontWeight: FontWeight.w700,
                        ),
                      ),
                    ),
...
