...
              },
              obscureText: obscureText,
              textInputAction: TextInputAction.done,
              hintText: context.l10n.password,
              suffixIcon: IconButton(
                icon: Icon(
                  semanticLabel: 'passwordeye',
                  obscureText ? Icons.visibility : Icons.visibility_off,
                ),
                onPressed: () {
                  setState(() {
                    obscureText = !obscureText;
                  });
...
