# EU_CancelDonation.yml
appId: net.givtapp.ios.test
name: Canceling a donation in the EU region

---

- tapOn: "homeMenu"
- tapOn: "Donations history"
- runFlow:
    when:
      visible:
        id: "Login-Bottomsheet-Password-Input"
    file: _shared/Login_AuthNeeded.yml
- tapOn: "Cancel"
- tapOn: "Yes"
- tapOn: "Back"
- tapOn:
    label: "Close menu"
    point: "95%,48%"